--- a/Kurzusok/Kurzusok/wwwroot/css/site.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/site.css
@@ -55,3 +55,9 @@ body {
 .dark-border {
     border:1px solid #7b8a8b !important;
 }
+.smaller{
+    font-size: 70%;
+}
+.maxwidth{
+    max-width:350px;
+}
