--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
@@ -12,9 +12,9 @@
     <section>
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Input.Email" class="sr-only">Email cím</label>
-            <input asp-for="Input.Email" type="email" class="form-control" placeholder="Email cím" required="" autofocus="" />
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <label asp-for="Input.UserName" class="sr-only">Felhasználó név</label>
+            <input asp-for="Input.UserName"  class="form-control" placeholder="Felhasználó név" required="" autofocus="" />
+            <span asp-validation-for="Input.UserName" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Input.Password" class="sr-only">Jelszó</label>
