--- a/Kurzusok/Kurzusok/wwwroot/css/site.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/site.css
@@ -46,11 +46,11 @@ body {
 }
 
 .w-85 {
-    width: 85% !important;
+    width: 85% ;
 }
 
 .w-80 {
-    width: 80% !important;
+    width: 80% ;
 }
 .dark-border {
     border:1px solid #7b8a8b !important;
@@ -60,4 +60,23 @@ body {
 }
 .maxwidth{
     max-width:350px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .w-d1{
+        width: 95%;
+    }
+
+    .w-d2 {
+        width: 94% ;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .w-d1 {
+        width: 100%;
+    }
+
+    .w-d2 {
+        width: 98%;
+    }
 }
