--- a/Kurzusok/Kurzusok/Views/Administration/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/Index.cshtml
@@ -1,35 +1,33 @@
 ﻿@using Kurzusok.ViewModels
 @model List<RolesViewModel>
 @{;
-    ViewBag.Tilte = "Felhasználói szintek";
+    ViewData["Title"] = "Felhasználói szintek";
+    Layout = "/Views/Administration/_AdminLayout.cshtml";
 }
-<h1>Felhasználói szintek</h1>
-@if (Model.Any())
-{
-    @foreach (var item in Model)
+<div class="w-80 row">
+    @if (Model.Any())
     {
-        <div class="card">
-            <div class="card-header">
-                <h5 class="card-title">@item.roleName</h5>
+        @foreach (var item in Model)
+        {
+            <div class="card col-5 p-0 m-2">
+                <div class="card-header">
+                    <h5 class="card-title text-center">@item.roleName</h5>
+                </div>
+                <div class="card-body">
+                    @foreach (var userName in item.Users)
+                    {
+                        <p>@userName</p>
+                    }
+                </div>
+                <div class="card-footer text-center">
+                    <a asp-controller="Administration" asp-action="EditUserRole" asp-route-roleId="@item.roleId" class="btn btn-primary">@item.roleName szint kezelése</a>
+                </div>
             </div>
-            <div class="card-body">
-                @foreach (var userName in item.Users)
-                {
-                    <p>@userName</p>
-                }
-            </div>
-            <div class="card-footer">
-                <a asp-controller="Administration" asp-action="EditUserRole" asp-route-roleId="@item.roleId" class="btn btn-primary">Felhasználók kezelése</a>
-            </div>
-        </div>
+        }
+
     }
-
-}
-else
-{
-    <p>Nincsenek felhasználói szintek!</p>
-}
-
-<p>
-    <a asp-area="Identity"  asp-page="/Account/Register" >Új felhasználó hozzáadása ehhez a szarhoz. </a>
-</p>
+    else
+    {
+        <p>Nincsenek felhasználói szintek!</p>
+    }
+</div>
