--- a/Kurzusok/Kurzusok/Views/Administration/_AdminLayout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/_AdminLayout.cshtml
@@ -1,28 +1,22 @@
 ﻿@{
-    if (ViewData.TryGetValue("ParentLayout", out var parentLayout))
-    {
-        Layout = (string)parentLayout;
-    }
-    else
-    {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
-    }
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Adminisztráció</h2>
 
 <div>
     <hr />
     <div class="row">
         <div class="col-md-3">
-            <partial name="_ManageNav" />
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item"> <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Felhasználói szintek</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Új felhasználó regisztrálása</a></li>
+            </ul>
         </div>
         <div class="col-md-9">
             @RenderBody()
         </div>
     </div>
 </div>
-
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
